--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
             <packageSourceCredentials>
               <github>
                 <add key="Username" value="dennisdhm7" />
-                <add key="ClearTextPassword" value="${{ secrets.GITHUB_TOKEN }}" />
+                <add key="ClearTextPassword" value="${{ secrets.GH_PACKAGES_TOKEN }}" />
               </github>
             </packageSourceCredentials>
           </configuration>
@@ -55,7 +55,7 @@ jobs:
 
       # 🚀 Publicar el paquete en GitHub Packages
       - name: 🚀 Publicar paquete en GitHub Packages
-        run: dotnet nuget push "./nupkg/*.nupkg" --source "github" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
+        run: dotnet nuget push "./nupkg/*.nupkg" --source "github" --api-key ${{ secrets.GH_PACKAGES_TOKEN }} --skip-duplicate
 
       # 🏷️ Crear release con el .nupkg adjunto
       - name: 🏷️ Crear Release con artefacto NuGet
